# planner

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/alloc/allocator/: trait.Alloc.js
implementors/alloc/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js  trait.Write.js
implementors/core/hash/: trait.BuildHasher.js  trait.Hash.js  trait.Hasher.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/str/: trait.FromStr.js
implementors/planner/layout/: trait.Layout.js
implementors/std/error/: trait.Error.js
planner/: index.html  macro.ok.html  macro.raise.html  sidebar-items.js  struct.Error.html  type.Result.html
planner/format/: index.html  sidebar-items.js  struct.SVG.html  struct.ThreeDICE.html  trait.Format.html
planner/layout/: index.html  sidebar-items.js  struct.Configuration.html  struct.Element.html  struct.Tiles.html  trait.Layout.html
planner/result/: struct.Error.html  type.Result.html
src/: format.rs  layout.rs  main.rs
src/format/: mod.rs  svg.rs  threed_ice.rs
src/layout/: mod.rs  tiles.rs
src/lib/: planner.rs
src/planner/: planner.rs.html  result.rs.html
tests/fixtures/: blackscholes.sqlite3
(+51 files in other folders)
