[package]
name = "planner"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/learning-on-chip/planner"
homepage = "https://github.com/learning-on-chip/planner"
description = """
Planner is a tool for constructing floorplans of multiprocessor systems."""

[dependencies]
arguments = "*"
sql = "*"
sqlite = "*"
